parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> MATHSCY
Rule 1     MATHSCY -> PROGRAM ID DECLARATIONS PROGRAM_BODY END SINGLE_POINT
Rule 2     DECLARATIONS -> VARIABLES_DECLARATION SUBPROCEDURES_DECLARATION
Rule 3     VARIABLES_DECLARATION -> DIM IDS_SEQUENCE AS VARIABLE_TYPE VARIABLES_DECLARATION
Rule 4     VARIABLES_DECLARATION -> <empty>
Rule 5     IDS_SEQUENCE -> ID COMMA IDS_SEQUENCE
Rule 6     IDS_SEQUENCE -> ID
Rule 7     VARIABLE_TYPE -> WORD
Rule 8     VARIABLE_TYPE -> WORD DIMENSIONAL_VAR_DECLARATION
Rule 9     VARIABLE_TYPE -> FLOAT
Rule 10    VARIABLE_TYPE -> FLOAT DIMENSIONAL_VAR_DECLARATION
Rule 11    DIMENSIONAL_VAR_DECLARATION -> OPEN_BRACKET SIMPLE_VALUE CLOSE_BRACKET
Rule 12    DIMENSIONAL_VAR_DECLARATION -> OPEN_BRACKET SIMPLE_VALUE COMMA SIMPLE_VALUE CLOSE_BRACKET
Rule 13    DIMENSIONAL_VAR_DECLARATION -> OPEN_BRACKET SIMPLE_VALUE COMMA SIMPLE_VALUE COMMA SIMPLE_VALUE CLOSE_BRACKET
Rule 14    SUBPROCEDURES_DECLARATION -> SUB PROCEDURE ID STATEMENTS RETURN SUBPROCEDURES_DECLARATION
Rule 15    SUBPROCEDURES_DECLARATION -> <empty>
Rule 16    PROGRAM_BODY -> MAIN DOUBLE_POINTS STATEMENTS
Rule 17    JUMPERS -> GOSUB ID
Rule 18    JUMPERS -> GOTO ID
Rule 19    JUMPERS -> ID DOUBLE_POINTS
Rule 20    VARIABLE_ASSIGNATION -> ID EQUALS ARITHMETIC_EXPRESSION
Rule 21    VARIABLE_ASSIGNATION -> ID DIMENSIONAL_VAR_INDEX EQUALS ARITHMETIC_EXPRESSION
Rule 22    VARIABLE_ASSIGNATION -> LET ID EQUALS ARITHMETIC_EXPRESSION
Rule 23    VARIABLE_ASSIGNATION -> LET ID DIMENSIONAL_VAR_INDEX EQUALS ARITHMETIC_EXPRESSION
Rule 24    DIMENSIONAL_VAR_INDEX -> OPEN_BRACKET ARITHMETIC_EXPRESSION CLOSE_BRACKET
Rule 25    DIMENSIONAL_VAR_INDEX -> OPEN_BRACKET ARITHMETIC_EXPRESSION CLOSE_BRACKET OPEN_BRACKET ARITHMETIC_EXPRESSION CLOSE_BRACKET
Rule 26    DIMENSIONAL_VAR_INDEX -> OPEN_BRACKET ARITHMETIC_EXPRESSION CLOSE_BRACKET OPEN_BRACKET ARITHMETIC_EXPRESSION CLOSE_BRACKET OPEN_BRACKET ARITHMETIC_EXPRESSION CLOSE_BRACKET
Rule 27    USER_INTERACTION -> CLS
Rule 28    USER_INTERACTION -> ID EQUALS INPUT OPEN_PARENTHESIS STRINGS_SEQUENCE CLOSE_PARENTHESIS
Rule 29    USER_INTERACTION -> LET ID EQUALS INPUT OPEN_PARENTHESIS STRINGS_SEQUENCE CLOSE_PARENTHESIS
Rule 30    USER_INTERACTION -> PRINT OPEN_PARENTHESIS STRINGS_SEQUENCE CLOSE_PARENTHESIS
Rule 31    STRINGS_SEQUENCE -> STRING COMMA STRINGS_SEQUENCE
Rule 32    STRINGS_SEQUENCE -> STRING
Rule 33    STRINGS_SEQUENCE -> ID COMMA STRINGS_SEQUENCE
Rule 34    STRINGS_SEQUENCE -> ID
Rule 35    IF_STATEMENT -> IF LOGICAL_EXPRESSION THEN STATEMENTS ELSE_STATEMENT END IF
Rule 36    ELSE_STATEMENT -> ELSE STATEMENTS
Rule 37    ELSE_STATEMENT -> ELSEIF LOGICAL_EXPRESSION THEN STATEMENTS ELSE_STATEMENT
Rule 38    ELSE_STATEMENT -> <empty>
Rule 39    WHILE_STATEMENT -> WHILE LOGICAL_EXPRESSION STATEMENTS WEND
Rule 40    DO_STATEMENT -> DO STATEMENTS LOOP UNTIL LOGICAL_EXPRESSION
Rule 41    FOR_STATEMENT -> FOR ID EQUALS ARITHMETIC_EXPRESSION TO ARITHMETIC_EXPRESSION SET_FOR_STEPS STATEMENTS NEXT ID
Rule 42    SET_FOR_STEPS -> OPEN_BRACKET SIMPLE_VALUE CLOSE_BRACKET
Rule 43    SET_FOR_STEPS -> <empty>
Rule 44    STATEMENTS -> JUMPERS STATEMENTS
Rule 45    STATEMENTS -> VARIABLE_ASSIGNATION STATEMENTS
Rule 46    STATEMENTS -> USER_INTERACTION STATEMENTS
Rule 47    STATEMENTS -> IF_STATEMENT STATEMENTS
Rule 48    STATEMENTS -> WHILE_STATEMENT STATEMENTS
Rule 49    STATEMENTS -> FOR_STATEMENT STATEMENTS
Rule 50    STATEMENTS -> DO_STATEMENT STATEMENTS
Rule 51    STATEMENTS -> <empty>
Rule 52    SIMPLE_VALUE -> WORD_VALUE
Rule 53    SIMPLE_VALUE -> FLOAT_VALUE
Rule 54    ANY_VALUE -> SIMPLE_VALUE
Rule 55    ANY_VALUE -> ID
Rule 56    ANY_VALUE -> ID OPEN_BRACKET ARITHMETIC_EXPRESSION CLOSE_BRACKET
Rule 57    ANY_VALUE -> ID OPEN_BRACKET ARITHMETIC_EXPRESSION CLOSE_BRACKET OPEN_BRACKET ARITHMETIC_EXPRESSION CLOSE_BRACKET
Rule 58    ANY_VALUE -> ID OPEN_BRACKET ARITHMETIC_EXPRESSION CLOSE_BRACKET OPEN_BRACKET ARITHMETIC_EXPRESSION CLOSE_BRACKET OPEN_BRACKET ARITHMETIC_EXPRESSION CLOSE_BRACKET
Rule 59    ARITHMETIC_EXPRESSION -> ARITHMETIC_EXPRESSION_P1
Rule 60    ARITHMETIC_EXPRESSION -> ARITHMETIC_EXPRESSION PLUS ARITHMETIC_EXPRESSION_P1
Rule 61    ARITHMETIC_EXPRESSION -> ARITHMETIC_EXPRESSION MINUS ARITHMETIC_EXPRESSION_P1
Rule 62    ARITHMETIC_EXPRESSION_P1 -> ARITHMETIC_EXPRESSION_P2
Rule 63    ARITHMETIC_EXPRESSION_P1 -> ARITHMETIC_EXPRESSION_P1 MULTIPLY ARITHMETIC_EXPRESSION_P2
Rule 64    ARITHMETIC_EXPRESSION_P1 -> ARITHMETIC_EXPRESSION_P1 DIVIDE_FLOATING_POINT ARITHMETIC_EXPRESSION_P2
Rule 65    ARITHMETIC_EXPRESSION_P1 -> ARITHMETIC_EXPRESSION_P1 MOD ARITHMETIC_EXPRESSION_P2
Rule 66    ARITHMETIC_EXPRESSION_P1 -> ARITHMETIC_EXPRESSION_P1 DIVIDE_ROUND_DOWN ARITHMETIC_EXPRESSION_P2
Rule 67    ARITHMETIC_EXPRESSION_P2 -> ARITHMETIC_EXPRESSION_P3
Rule 68    ARITHMETIC_EXPRESSION_P2 -> ARITHMETIC_EXPRESSION_P2 POWER_BY ARITHMETIC_EXPRESSION_P3
Rule 69    ARITHMETIC_EXPRESSION_P3 -> OPEN_PARENTHESIS ARITHMETIC_EXPRESSION CLOSE_PARENTHESIS
Rule 70    ARITHMETIC_EXPRESSION_P3 -> ANY_VALUE
Rule 71    LOGICAL_EXPRESSION -> LOGICAL_EXPRESSION_P1
Rule 72    LOGICAL_EXPRESSION -> LOGICAL_EXPRESSION OR LOGICAL_EXPRESSION_P1
Rule 73    LOGICAL_EXPRESSION_P1 -> LOGICAL_EXPRESSION_P2
Rule 74    LOGICAL_EXPRESSION_P1 -> LOGICAL_EXPRESSION_P1 AND LOGICAL_EXPRESSION_P2
Rule 75    LOGICAL_EXPRESSION_P2 -> LOGICAL_EXPRESSION_P3
Rule 76    LOGICAL_EXPRESSION_P2 -> NOT LOGICAL_EXPRESSION_P3
Rule 77    LOGICAL_EXPRESSION_P3 -> OPEN_PARENTHESIS LOGICAL_EXPRESSION CLOSE_PARENTHESIS
Rule 78    LOGICAL_EXPRESSION_P3 -> ARITHMETIC_EXPRESSION RELATIONAL_OPERATOR ARITHMETIC_EXPRESSION
Rule 79    RELATIONAL_OPERATOR -> EQUAL_TO
Rule 80    RELATIONAL_OPERATOR -> DIFFERENT_TO
Rule 81    RELATIONAL_OPERATOR -> LESS_THAN
Rule 82    RELATIONAL_OPERATOR -> GREATER_THAN
Rule 83    RELATIONAL_OPERATOR -> LESS_OR_EQUAL_THAN
Rule 84    RELATIONAL_OPERATOR -> GREATER_OR_EQUAL_THAN

Terminals, with rules where they appear

AND                  : 74
AS                   : 3
CLOSE_BRACKET        : 11 12 13 24 25 25 26 26 26 42 56 57 57 58 58 58
CLOSE_PARENTHESIS    : 28 29 30 69 77
CLS                  : 27
COMMA                : 5 12 13 13 31 33
DIFFERENT_TO         : 80
DIM                  : 3
DIVIDE_FLOATING_POINT : 64
DIVIDE_ROUND_DOWN    : 66
DO                   : 40
DOUBLE_POINTS        : 16 19
ELSE                 : 36
ELSEIF               : 37
END                  : 1 35
EQUALS               : 20 21 22 23 28 29 41
EQUAL_TO             : 79
FLOAT                : 9 10
FLOAT_VALUE          : 53
FOR                  : 41
GOSUB                : 17
GOTO                 : 18
GREATER_OR_EQUAL_THAN : 84
GREATER_THAN         : 82
ID                   : 1 5 6 14 17 18 19 20 21 22 23 28 29 33 34 41 41 55 56 57 58
IF                   : 35 35
INPUT                : 28 29
LESS_OR_EQUAL_THAN   : 83
LESS_THAN            : 81
LET                  : 22 23 29
LOOP                 : 40
MAIN                 : 16
MINUS                : 61
MOD                  : 65
MULTIPLY             : 63
NEXT                 : 41
NOT                  : 76
OPEN_BRACKET         : 11 12 13 24 25 25 26 26 26 42 56 57 57 58 58 58
OPEN_PARENTHESIS     : 28 29 30 69 77
OR                   : 72
PLUS                 : 60
POWER_BY             : 68
PRINT                : 30
PROCEDURE            : 14
PROGRAM              : 1
RETURN               : 14
SINGLE_POINT         : 1
STRING               : 31 32
SUB                  : 14
THEN                 : 35 37
TO                   : 41
UNTIL                : 40
WEND                 : 39
WHILE                : 39
WORD                 : 7 8
WORD_VALUE           : 52
error                : 

Nonterminals, with rules where they appear

ANY_VALUE            : 70
ARITHMETIC_EXPRESSION : 20 21 22 23 24 25 25 26 26 26 41 41 56 57 57 58 58 58 60 61 69 78 78
ARITHMETIC_EXPRESSION_P1 : 59 60 61 63 64 65 66
ARITHMETIC_EXPRESSION_P2 : 62 63 64 65 66 68
ARITHMETIC_EXPRESSION_P3 : 67 68
DECLARATIONS         : 1
DIMENSIONAL_VAR_DECLARATION : 8 10
DIMENSIONAL_VAR_INDEX : 21 23
DO_STATEMENT         : 50
ELSE_STATEMENT       : 35 37
FOR_STATEMENT        : 49
IDS_SEQUENCE         : 3 5
IF_STATEMENT         : 47
JUMPERS              : 44
LOGICAL_EXPRESSION   : 35 37 39 40 72 77
LOGICAL_EXPRESSION_P1 : 71 72 74
LOGICAL_EXPRESSION_P2 : 73 74
LOGICAL_EXPRESSION_P3 : 75 76
MATHSCY              : 0
PROGRAM_BODY         : 1
RELATIONAL_OPERATOR  : 78
SET_FOR_STEPS        : 41
SIMPLE_VALUE         : 11 12 12 13 13 13 42 54
STATEMENTS           : 14 16 35 36 37 39 40 41 44 45 46 47 48 49 50
STRINGS_SEQUENCE     : 28 29 30 31 33
SUBPROCEDURES_DECLARATION : 2 14
USER_INTERACTION     : 46
VARIABLES_DECLARATION : 2 3
VARIABLE_ASSIGNATION : 45
VARIABLE_TYPE        : 3
WHILE_STATEMENT      : 48

Parsing method: LALR

state 0

    (0) S' -> . MATHSCY
    (1) MATHSCY -> . PROGRAM ID DECLARATIONS PROGRAM_BODY END SINGLE_POINT

    PROGRAM         shift and go to state 2

    MATHSCY                        shift and go to state 1

state 1

    (0) S' -> MATHSCY .



state 2

    (1) MATHSCY -> PROGRAM . ID DECLARATIONS PROGRAM_BODY END SINGLE_POINT

    ID              shift and go to state 3


state 3

    (1) MATHSCY -> PROGRAM ID . DECLARATIONS PROGRAM_BODY END SINGLE_POINT
    (2) DECLARATIONS -> . VARIABLES_DECLARATION SUBPROCEDURES_DECLARATION
    (3) VARIABLES_DECLARATION -> . DIM IDS_SEQUENCE AS VARIABLE_TYPE VARIABLES_DECLARATION
    (4) VARIABLES_DECLARATION -> .

    DIM             shift and go to state 6
    SUB             reduce using rule 4 (VARIABLES_DECLARATION -> .)
    MAIN            reduce using rule 4 (VARIABLES_DECLARATION -> .)

    DECLARATIONS                   shift and go to state 4
    VARIABLES_DECLARATION          shift and go to state 5

state 4

    (1) MATHSCY -> PROGRAM ID DECLARATIONS . PROGRAM_BODY END SINGLE_POINT
    (16) PROGRAM_BODY -> . MAIN DOUBLE_POINTS STATEMENTS

    MAIN            shift and go to state 8

    PROGRAM_BODY                   shift and go to state 7

state 5

    (2) DECLARATIONS -> VARIABLES_DECLARATION . SUBPROCEDURES_DECLARATION
    (14) SUBPROCEDURES_DECLARATION -> . SUB PROCEDURE ID STATEMENTS RETURN SUBPROCEDURES_DECLARATION
    (15) SUBPROCEDURES_DECLARATION -> .

    SUB             shift and go to state 10
    MAIN            reduce using rule 15 (SUBPROCEDURES_DECLARATION -> .)

    SUBPROCEDURES_DECLARATION      shift and go to state 9

state 6

    (3) VARIABLES_DECLARATION -> DIM . IDS_SEQUENCE AS VARIABLE_TYPE VARIABLES_DECLARATION
    (5) IDS_SEQUENCE -> . ID COMMA IDS_SEQUENCE
    (6) IDS_SEQUENCE -> . ID

    ID              shift and go to state 12

    IDS_SEQUENCE                   shift and go to state 11

state 7

    (1) MATHSCY -> PROGRAM ID DECLARATIONS PROGRAM_BODY . END SINGLE_POINT

    END             shift and go to state 13


state 8

    (16) PROGRAM_BODY -> MAIN . DOUBLE_POINTS STATEMENTS

    DOUBLE_POINTS   shift and go to state 14


state 9

    (2) DECLARATIONS -> VARIABLES_DECLARATION SUBPROCEDURES_DECLARATION .

    MAIN            reduce using rule 2 (DECLARATIONS -> VARIABLES_DECLARATION SUBPROCEDURES_DECLARATION .)


state 10

    (14) SUBPROCEDURES_DECLARATION -> SUB . PROCEDURE ID STATEMENTS RETURN SUBPROCEDURES_DECLARATION

    PROCEDURE       shift and go to state 15


state 11

    (3) VARIABLES_DECLARATION -> DIM IDS_SEQUENCE . AS VARIABLE_TYPE VARIABLES_DECLARATION

    AS              shift and go to state 16


state 12

    (5) IDS_SEQUENCE -> ID . COMMA IDS_SEQUENCE
    (6) IDS_SEQUENCE -> ID .

    COMMA           shift and go to state 17
    AS              reduce using rule 6 (IDS_SEQUENCE -> ID .)


state 13

    (1) MATHSCY -> PROGRAM ID DECLARATIONS PROGRAM_BODY END . SINGLE_POINT

    SINGLE_POINT    shift and go to state 18


state 14

    (16) PROGRAM_BODY -> MAIN DOUBLE_POINTS . STATEMENTS
    (44) STATEMENTS -> . JUMPERS STATEMENTS
    (45) STATEMENTS -> . VARIABLE_ASSIGNATION STATEMENTS
    (46) STATEMENTS -> . USER_INTERACTION STATEMENTS
    (47) STATEMENTS -> . IF_STATEMENT STATEMENTS
    (48) STATEMENTS -> . WHILE_STATEMENT STATEMENTS
    (49) STATEMENTS -> . FOR_STATEMENT STATEMENTS
    (50) STATEMENTS -> . DO_STATEMENT STATEMENTS
    (51) STATEMENTS -> .
    (17) JUMPERS -> . GOSUB ID
    (18) JUMPERS -> . GOTO ID
    (19) JUMPERS -> . ID DOUBLE_POINTS
    (20) VARIABLE_ASSIGNATION -> . ID EQUALS ARITHMETIC_EXPRESSION
    (21) VARIABLE_ASSIGNATION -> . ID DIMENSIONAL_VAR_INDEX EQUALS ARITHMETIC_EXPRESSION
    (22) VARIABLE_ASSIGNATION -> . LET ID EQUALS ARITHMETIC_EXPRESSION
    (23) VARIABLE_ASSIGNATION -> . LET ID DIMENSIONAL_VAR_INDEX EQUALS ARITHMETIC_EXPRESSION
    (27) USER_INTERACTION -> . CLS
    (28) USER_INTERACTION -> . ID EQUALS INPUT OPEN_PARENTHESIS STRINGS_SEQUENCE CLOSE_PARENTHESIS
    (29) USER_INTERACTION -> . LET ID EQUALS INPUT OPEN_PARENTHESIS STRINGS_SEQUENCE CLOSE_PARENTHESIS
    (30) USER_INTERACTION -> . PRINT OPEN_PARENTHESIS STRINGS_SEQUENCE CLOSE_PARENTHESIS
    (35) IF_STATEMENT -> . IF LOGICAL_EXPRESSION THEN STATEMENTS ELSE_STATEMENT END IF
    (39) WHILE_STATEMENT -> . WHILE LOGICAL_EXPRESSION STATEMENTS WEND
    (41) FOR_STATEMENT -> . FOR ID EQUALS ARITHMETIC_EXPRESSION TO ARITHMETIC_EXPRESSION SET_FOR_STEPS STATEMENTS NEXT ID
    (40) DO_STATEMENT -> . DO STATEMENTS LOOP UNTIL LOGICAL_EXPRESSION

    END             reduce using rule 51 (STATEMENTS -> .)
    GOSUB           shift and go to state 27
    GOTO            shift and go to state 29
    ID              shift and go to state 28
    LET             shift and go to state 30
    CLS             shift and go to state 31
    PRINT           shift and go to state 32
    IF              shift and go to state 33
    WHILE           shift and go to state 34
    FOR             shift and go to state 35
    DO              shift and go to state 36

    STATEMENTS                     shift and go to state 19
    JUMPERS                        shift and go to state 20
    VARIABLE_ASSIGNATION           shift and go to state 21
    USER_INTERACTION               shift and go to state 22
    IF_STATEMENT                   shift and go to state 23
    WHILE_STATEMENT                shift and go to state 24
    FOR_STATEMENT                  shift and go to state 25
    DO_STATEMENT                   shift and go to state 26

state 15

    (14) SUBPROCEDURES_DECLARATION -> SUB PROCEDURE . ID STATEMENTS RETURN SUBPROCEDURES_DECLARATION

    ID              shift and go to state 37


state 16

    (3) VARIABLES_DECLARATION -> DIM IDS_SEQUENCE AS . VARIABLE_TYPE VARIABLES_DECLARATION
    (7) VARIABLE_TYPE -> . WORD
    (8) VARIABLE_TYPE -> . WORD DIMENSIONAL_VAR_DECLARATION
    (9) VARIABLE_TYPE -> . FLOAT
    (10) VARIABLE_TYPE -> . FLOAT DIMENSIONAL_VAR_DECLARATION

    WORD            shift and go to state 39
    FLOAT           shift and go to state 40

    VARIABLE_TYPE                  shift and go to state 38

state 17

    (5) IDS_SEQUENCE -> ID COMMA . IDS_SEQUENCE
    (5) IDS_SEQUENCE -> . ID COMMA IDS_SEQUENCE
    (6) IDS_SEQUENCE -> . ID

    ID              shift and go to state 12

    IDS_SEQUENCE                   shift and go to state 41

state 18

    (1) MATHSCY -> PROGRAM ID DECLARATIONS PROGRAM_BODY END SINGLE_POINT .

    $end            reduce using rule 1 (MATHSCY -> PROGRAM ID DECLARATIONS PROGRAM_BODY END SINGLE_POINT .)


state 19

    (16) PROGRAM_BODY -> MAIN DOUBLE_POINTS STATEMENTS .

    END             reduce using rule 16 (PROGRAM_BODY -> MAIN DOUBLE_POINTS STATEMENTS .)


state 20
